kubernetes/test/app-test-deployment-fast-api.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: baywatch-test-fast-api-deployment
  labels:
    app: baywatch-test-fast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baywatch-test-fast-api
  template:
    metadata:
      labels:
        app: baywatch-test-fast-api
    spec:
      containers:
        - name: baywatch-test-fast-api
          imagePullPolicy: Always
          image: aravp4/baywatch_api:1.0
          ports:
          - name: http
            containerPort: 8000
          env:
          - name: REDIS_IP
            value: baywatch-test-redis-service
          - name: LOG_LEVEL
            value: INFO
