kubernetes/test/app-test-ingress-fast-api.yml

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: baywatch-test-fast-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "aravp06-baywatch-test.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: baywatch-test-fast-api-nodeport-service
              port:
                  number: 8000
