kubernetes/test/app-test-service-fast-api.yml

apiVersion: v1
kind: Service
metadata:
  name: baywatch-test-fast-api-service
spec:
  type: ClusterIP
  selector:
    app: baywatch-test-fast-api
  ports:
  - name: baywatch-test-fast-api
    port: 8000
    targetPort: 8000
