kubernetes/test/app-test-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: baywatch-test-redis-service
spec:
  type: ClusterIP
  selector:
    app: baywatch-test-redis
  ports:
  - name: baywatch-test-redis
    port: 6379
    targetPort: 6379
